# ocaml-stdint-literals

./: README.md  dune-project  stdint-literals.opam
ppx/: dune  stdint_literals.ml
tests/: dune  simple_test.ml
